Bug 78138 - SIGSEGV in handle_output_move_layer during weston shutdown in multi-head
Summary: SIGSEGV in handle_output_move_layer during weston shutdown in multi-head
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-01 00:14 UTC by Anu Reddy
Modified: 2014-05-08 17:33 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
gdb_backtrace (5.34 KB, text/plain)
2014-05-01 00:14 UTC, Anu Reddy
Details
weston-log (6.92 KB, text/plain)
2014-05-01 00:17 UTC, Anu Reddy
Details

Description Anu Reddy 2014-05-01 00:14:51 UTC
Created attachment 98271 [details]
gdb_backtrace

In multi-head setup, weston crashes during shutdown with segmentation fault in handle_output_move_layer. See attached gdb_backtrace and weston log.

Steps:
1. Two cold plugged displays
2. Launch weston
3. Shutdown weston via <ctrl> + <alt> + <backspace>


Software Strack:
wayland (master) heads/master-0-g3e96272
drm (master) heads/master-0-ge6ec4c8
mesa (master) heads/master-0-g6c8f547
libva (master) heads/master-0-g254f05c
intel-driver (master) heads/master-0-gda837dc
cairo (master) heads/master-0-g0e0004a
libinput (master) heads/master-0-gaba28c0
weston (master) heads/master-0-g1e40a7e
Comment 1 Anu Reddy 2014-05-01 00:17:21 UTC
Created attachment 98272 [details]
weston-log
Comment 2 Kristian Høgsberg 2014-05-01 03:46:43 UTC
commit 6d50b0f2a1bec779b5dc89a286dc6d780c6fd913
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Wed Apr 30 20:46:25 2014 -0700

    desktop-shell: Remove output_move listener on shutdown
    
    https://bugs.freedesktop.org/show_bug.cgi?id=78138


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.