desktop-shell: Remove output_move listener on shutdown

https://bugs.freedesktop.org/show_bug.cgi?id=78138